2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDisplay.py (help): Rename gramps-manual to gramps.

2006-10-11  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/_WinMime.py: potential fix for #446

2006-10-10  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Update version number.
	* NEWS: Update.
	* src/plugins/ExportVCalendar.py (get_option_box): Use custom filters.
	* src/plugins/ExportVCard.py (get_option_box): Use custom filters.
	* src/plugins/WriteFtree.py (get_option_box): Use custom filters.
	* src/plugins/WriteGeneWeb.py (get_option_box): Use custom filters.
	* src/Selectors/_BaseSelector.py: Import gettext.

2006-10-10  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: use pngs for windows

2006-10-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteXML.py (strip_dict): Do not strip tab, LF, CR.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10,
	gramps_upgrade_11): Properly use TXN.	

2006-10-09  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (has_object_handle): Typo.

2006-10-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix object importation

2006-10-09  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py (setup_title): Set name to
	empty string if no person is available.
	* src/ReportBase/_ReportDialog.py (get_header): Make meaningful
	title for the header when name is empty.
	* src/FilterEditor/_FilterEditor.py (close): Allow more arguments.

2006-10-09  Don Allingham  <don@gramps-project.org>
	* src/Selectors/_SelectPerson.py: enable toggle button to display all
	* src/glade/gramps.glade: add toggle button
	* src/Editors/_EditPerson.py: add person's name to title
	* src/RelLib/_Name.py: add empty check

2006-10-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py: fix DAR-Endnotes indent
	* src/plugins/DetDescendantReport.py: fix DDR-Endnotes indent
